fix(app): z-index positioning

--- a/src/app/shared/components/navbar/navbar.component.css
+++ b/src/app/shared/components/navbar/navbar.component.css
@@ -17,6 +17,7 @@
     border-radius: var(--card-radius);
     border: 1px solid var(--border-color);
     box-shadow: var(--card-shadow);
+    z-index: 10;
 
     .navbar-items {
       display: flex;
